# repo_father

./: .gitignore  README.md  pyproject.toml
src/repo_father/: main.py
tests/: test_package.py
